--- a/config/locales/ja.json
+++ b/config/locales/ja.json
@@ -125,5 +125,30 @@
       "Sails.jsにgengo.jsを設定すると簡単です。",
       "`sailsapp/config/`にある`http.js`ファイルを変更する必要があります。"
     ]
+  },
+  "dict": {
+    "info": "辞書のセットアップは簡単です。私たちは、基本的なセットアップまたは表記とキーワードの使用方法を見ていきます。",
+    "note": {
+      "one": {
+        "translated": "*index* は、常に 「　/　」 なので変更することはできません。キーは、URLパスに従わなければなりません。",
+        "note": "gengoは、URLにバージョン番号をサポートしています。以下は、バージョン番号の正規表現です。"
+      },
+      "two": "あなたはBracketやDot表記を使用するときは、あなたのネイティブ辞書（デフォルトロケール）で同じ定義を提供する必要があります。"
+    },
+    "keyword": {
+      "info": [
+        "キーワードは、自動的にgengoによって検索されます。",
+        "キーワードが提供されていなければ、あなたの辞書のキーで目的のフレーズの場合は、gengoが表示されます。"
+      ],
+      "table": {
+        "one": "キーの複数形を指定するために使用します。",
+        "two": "キーのデフォルト語句を指定するために使用します。BracketまたはDot表記を使用する場合に便利です。",
+        "three": "キーの翻訳語句を指定するために使用します。BracketまたはDot表記を使用する場合に便利です。",
+        "four": [
+          "すべてのルート間でキーにアクセスするために使用します。",
+          "つまり、URLパスが**/about**である場合、aboutページ内で使用されるuniverseキーから何でもアクセスできることを意味します。"
+        ]
+      }
+    }
   }
 }
