--- a/config/locales/ja.json
+++ b/config/locales/ja.json
@@ -4,14 +4,14 @@
   },
   "intro": {
     "about": [
-      "gengo.jsは単にあなたのフレーズを翻訳するi18nミドルウェアです。",
-      "それはあなたの定義にアクセスするために3つの簡単な表記を使用できるようにすることで、",
-      "ワークフローを容易にすることを目指しています。",
-      "gengoは.jsや.jsonファイル、ルーティング、複数の、マルチラインフレーズ、Mustache.js、",
+      "gengo.jsは簡単にあなたのフレーズを翻訳するi18nミドルウェアです。",
+      "それはあなたの定義にアクセスするために3つの簡単な表記を使用にすることで、",
+      "ワークフローを容易にすることを目的としています。",
+      "gengoは.jsや.jsonファイル、ルーティング、複数形表示、マルチラインフレーズ、Mustache.js、",
       "Kawari.js、Moment.js、Numeral.js、およびクッキーを使用してロケールオーバーライドをサポートしています。"
     ],
     "note": [
-      "gengo.jsはかなり新しく、一部の機能がまたは有用であることが証明できない場合があります。",
+      "gengo.jsはかなり新しいソフトであるために、一部の機能で活用されない場合があります。",
       "したがって、フィードバックはgengo.jsを改善するための最も重要な方法です。"
     ]
   },
@@ -149,6 +149,19 @@
           "つまり、URLパスが**/about**である場合、aboutページ内で使用されるuniverseキーから何でもアクセスできることを意味します。"
         ]
       }
+    },
+    "markdown": {
+      "info": [
+        "gengo.jsは、あなたのフレーズに基本的な書式を挿入することができ、組み込みおよびカスタマイズされたマークダウンパーサを持っています。",
+        "これは、退屈なプロセスに心配しなく、あなたのフレーズにHTMLを挿入することに集中することができます。"
+      ],
+      "note":"リンクは、以下のターゲットをサポートしています。"
+    },
+    "multiline":{
+    	"info":[
+    		"あなたの辞書に長いフレーズを書き込むケースがあります。そのせいでフォーマットが読みにくなります。",
+    		"この問題を克服するために、gengoは、あなたの辞書に配列を使用することができます。"
+    	]
     }
   }
 }
