--- a/config/locales/ja.json
+++ b/config/locales/ja.json
@@ -17,16 +17,16 @@
   },
   "install": {
     "instruct": [
-      "gengo.jsは、WindowsとLinuxでテストされ、Express 4とSails.jsで最適に動作されています。",
+      "gengo.jsは、WindowsとLinuxでテストされ、Express 4とSails.jsで最適にオペレートされています。",
       "一度インストールすると、gengo.jsは試すことができる2つのSails.jsアプリのサンプルが含まれています。"
     ],
-    "initialize": "あなたは、単に必要とし、それを構成することによってgengo.jsを初期化することができます。Configurationを参照してください。",
-    "usage": "gengo.jsは`__`使用しますが、変更することができます。Configurationを参照してください。",
-    "note": "gengo.jsは、スクリプトタグであり、最もテンプレートエンジンに使用することができます。"
+    "initialize": "簡単にgengo.jsを初期化することができます。Configurationを参照してください。",
+    "usage": "gengo.jsは`__`を使用しますが、変更することもできます。Configurationを参照してください。",
+    "note": "gengo.jsは、スクリプトタグと、たいていのテンプレートエンジンに使用することができます。"
   },
   "api": {
     "info": [
-      "gengoは1からnの引数を受けるファンクションです。あなたの語句の定義が見つかった場合は、文字列または未定義のいずれかを返す。"
+      "gengoは1からnの引数を受け入れるファンクションです。語句の定義が見つかった場合、文字列または未定義のいずれかに戻ります。"
     ],
     "input": {
       "translated": [
@@ -37,25 +37,25 @@
         "one": "phraseは、要求されたロケールで検索する。",
         "two": {
           "one": "phraseは、要求されたロケールで検索する。",
-          "two": "ロケールが上書きする。",
-          "three": "フレーズの装置。"
+          "two": "ロケールが上書きされる。",
+          "three": "フレーズの数値。"
         },
-        "note": "gengo.jsは、複数のためのシンプルな2>1のルールを使用しています。"
+        "note": "gengo.jsは、複数形にするためのシンプルな2>1のルールを使用しています。"
       }
     },
     "notation": {
       "info": [
-        "あなたはフレーズを挿入すると、あなたの定義をルックアップする方法をgengoに伝えるために使用することができる3つの表記があります。",
+        "フレーズを挿入すると、その定義を見つける方法をgengoに伝えるために使用することができる3つの表記があります。",
         "セットアップのためのDictionaryを参照してください。"
       ],
       "table": {
-        "one": "辞書でフレーズのためのサブキーが存在しないと仮定すると、gengoは直接定義を検索します。",
-        "two": "点線であり、また、サブキーを含むことができるサブキーまたはキーを含むことができるフレーズを想定して、gengoは、定義を検索します。",
-        "three": "受け入れることができ、argのデータに基づいて解釈するであろう異なる種類のデータがあります。"
+        "one": "辞書でフレーズのサブキーが存在しないと仮定すると、gengoは直接定義を検索します。",
+        "two": "フレーズの中に、点が存在したり、キーのあとのサブキーまで含まれることを想定して、gengoは、定義を検索します。",
+        "three": "辞書の中のオブジェクトの意味をドット方によって、定義を検索します。"
       }
     },
     "arg": {
-      "note": "受け入れることができ、argのデータに基づいて、それらを解釈するデータの種類があります。",
+      "note": "Argが受け入れて翻訳できる色々なタイプのデータがあります。",
       "table": {
         "one": "gengoはsprintf、locale、またはcountをStringとしてを解釈します。",
         "two": "gengoはArrayをsprintfとして解釈します。",
@@ -65,61 +65,53 @@
     },
     "methods": {
       "table": {
-        "one": "現在の言語を返します。",
+        "one": "現在の言語をリターンします。",
         "two": "ロケールを設定します。",
-        "three": "ロケールを返します。",
+        "three": "ロケールをリターンします。",
         "four": {
-          "one": "Momentのオブジェクトを返します。",
-          "two": "MomentはObjectでロケールを上書きするロケールオプションを指定してを受け入れることができます。",
+          "one": "Momentのオブジェクトをリターンします。",
+          "two": "Momentは、ロケールに上書きするために、ロケールオプションでObjectを受け入れることができます。",
           "three": "ドックスのため[momentjs.com](http://www.momentjs.com)[blank]を参照してください。"
         },
         "five": {
-          "one": "Numeralのオブジェクトを返します。",
-          "two": "NumeralはObjectでロケールを上書きするロケールオプションを指定してを受け入れることができます。",
+          "one": "Numeralのオブジェクトをリターンします。",
+          "two": "Numeralは、ロケールに上書きするために、ロケールオプションでObjectを受け入れることができます。",
           "three": "ドックスのため[numeraljs.com](http://www.numeraljs.com)[blank]を参照してください。"
         },
         "note": [
-          "あなたの言語やロケールが[マップのリスト](https://github.com/iwatakeshi/gengojs/tree/master/maps)[blank]",
-          "にない場合は、フォークかプールしてください。そうすれば、gengo.jsも上達します。"
+          "言語やロケールが[マップのリスト](https://github.com/iwatakeshi/gengojs/tree/master/maps)[blank]",
+          "にない場合は、フォークかプールしてください。そうすれば、gengo.jsが使いやすくなります。"
         ]
       }
     }
   },
   "config": {
-    "info": "gengoを設定するには、以下の表は、受け入れられている各オプションのどのデータタイプを知ることを参照してください。",
+    "info": "gengoを設定するには、どのデータタイプが受け入られるかを以下の表で見てください。",
     "table": {
       "one": "gengoのグローバル変数を変更します。",
-      "two": "あなたの辞書へのパス。すべてのパスが自動的に正規化され、ルートが追加されますが、ルートを上書きすることができることに注意してください。",
+      "two": "辞書へのパス。すべてのパスが自動的に正規化され、ルートが追加されますが、ルートを上書きすることができることに注意してください。",
       "three": {
         "translated": [
-          "デバッグ文を出力します。利用可能なタイプは、情報、警告エラーデバッグとデータ。",
+          "デバッグ文を出します。利用可能なタイプは、情報、警告エラーデバッグとデータ。",
           "また、他の設定を追加するために、オブジェクトを挿入することができます。"
         ],
         "note": "多くのデバッグオプションについては[cout](https://www.github.com/iwatakeshi/cout)[blank]を参照してください。"
       },
-      "four": "あなたのアプリのためのデフォルトのロケール。これは、通常、あなたの母国語でのロケールになります。",
+      "four": "アプリのためのデフォルトのロケール。これは、通常、あなたの母国語でのロケールになります。",
       "five": {
-        "translated": "あなたのアプリのためにサポートされるロケール。",
-        "note": {
-          "one": [
-            "デフォルトのロケールとサポートされているロケールは大文字と小文字が区別されません。",
-            "ですが、ファイル名の設定をするときgengo.jsは大文字と小文字を区別されます。",
-            "その理由は低いレベル（ファイルの命名）を影響する可能性がより高いレベルで（設定）、ファイルの命名やミスのために矛盾を削減します。"
-          ],
-          "two": "あなたはオプションの命名大文字小文字を区別しないファイルをご希望の場合は、GitHubのに問題を作成してください。"
-        }
+        "translated": "アプリのためにサポートされるロケール。"
       },
       "six": {
-        "translated": "あなたがルートによってあなたの辞書を整理できるようにします。",
-        "note": "辞書でルートを設定することは非常に簡単です。Dictionaryを参照してください。"
+        "translated": "ルートによってあなたの辞書を整理できるようにします。",
+        "note": "辞書でルートを設定するのは非常に簡単です。Dictionaryを参照してください。"
       },
       "seven": "有効またはマークダウンを無効にします。",
-      "eight": "あなたの辞書のファイル拡張子を設定します。",
+      "eight": "辞書のファイル拡張を設定します。",
       "nine": {
         "one": "plural、default、translated、universeのために使用されるキーワードを変更します。",
         "two": "Dictionaryを参照してください。"
       },
-      "ten": "クッキーのデフォルトの変数名を設定します。"
+      "ten": "クッキーのデフォルトの変更名を設定します。"
     },
     "sails": [
       "Sails.jsにgengo.jsを設定すると簡単です。",
@@ -127,18 +119,18 @@
     ]
   },
   "dict": {
-    "info": "辞書のセットアップは簡単です。私たちは、基本的なセットアップまたは表記とキーワードの使用方法を見ていきます。",
+    "info": "辞書のセットアップは簡単です。基本的なセットアップまたは表記とキーワードの使用方法を見ます。",
     "note": {
       "one": {
         "translated": "*index* は、常に 「　/　」 なので変更することはできません。キーは、URLパスに従わなければなりません。",
         "note": "gengoは、URLにバージョン番号をサポートしています。以下は、バージョン番号の正規表現です。"
       },
-      "two": "あなたはBracketやDot表記を使用するときは、あなたのネイティブ辞書（デフォルトロケール）で同じ定義を提供する必要があります。"
+      "two": "BracketやDot表記を使用するときは、あなたのネイティブ辞書（デフォルトロケール）で同じ定義を提供する必要があります。"
     },
     "keyword": {
       "info": [
         "キーワードは、自動的にgengoによって検索されます。",
-        "キーワードが提供されていなければ、あなたの辞書のキーで目的のフレーズの場合は、gengoが表示されます。"
+        "キーワードがなければ、あなたの辞書の中のキーがそのさがしているフレーズであるかをgengoが表示します。"
       ],
       "table": {
         "one": "キーの複数形を指定するために使用します。",
@@ -152,16 +144,16 @@
     },
     "markdown": {
       "info": [
-        "gengo.jsは、あなたのフレーズに基本的な書式を挿入することができ、組み込みおよびカスタマイズされたマークダウンパーサを持っています。",
-        "これは、退屈なプロセスに心配しなく、あなたのフレーズにHTMLを挿入することに集中することができます。"
+        "gengo.jsは、フレーズに基本的な書式を挿入することができ、組み込みおよびカスタマイズされたマークダウンパーサを持っています。",
+        "これは、プロセスを心配しなくて、あなたのフレーズにHTMLを挿入することに集中できます。"
       ],
-      "note":"リンクは、以下のターゲットをサポートしています。"
+      "note": "リンクは、以下のターゲットをサポートしています。"
     },
-    "multiline":{
-    	"info":[
-    		"あなたの辞書に長いフレーズを書き込むケースがあります。そのせいでフォーマットが読みにくなります。",
-    		"この問題を克服するために、gengoは、あなたの辞書に配列を使用することができます。"
-    	]
+    "multiline": {
+      "info": [
+        "あなたの辞書に長いフレーズを書き込むケースがあります。そのためフォーマットが読みにくなります。",
+        "この問題を克服するためにgengoでは、あなたの辞書に配列表示を使うことができます。"
+      ]
     }
   }
 }
