--- a/config/locales/en-us.json
+++ b/config/locales/en-us.json
@@ -63,7 +63,7 @@
       }
     },
     "arg": {
-      "note": [
+      "info": [
         "There are different types of data that arg can accept and ",
         "will interpret them based on the data."
       ],
